  persisted independently of LOGFETCH_SCROLLBACK or client frequency.
* xymonproxy now can send one-way messages via the local BFQ when given 
  the --bfq option. By default it will combine messages as well, unless
  given --no-extcombine. In this mode, only two-way messages will be
  forwarded to the server over TCP, so it only makes sense to have a
  single one listed.

* FIXME-doc: Add --no-cookies and --no-save-cookies (read but don't 
  write) to xymonnet
* FIXME-doc: Add hidden tunables for controlling flushing to the external 
  RRD processor. Set RRD_EXTPROC_DOFLUSH to flush after every processed 
  message (which could be multiple lines). Set RRD_EXTPROC_BUFSIZ to 
  control buffer size (similar to BUFSIZ)
* FIXME-doc: Experimental support for rrdcached (requires rrdtoool 1.5 
  or higher) (Thanks, Martin Sperl)
* FIXME-doc: xymond_rrd: Add --flushtimeout option and reduce the 
  frequency of cachectl, zombie, and extcombo flushing

* The first line of a status message (beginning at the color indicator) 
  is now limited to 255 characters
* Performance optimizations / bug fixes with POSIX btree usage
* Performance improvements within xymond_rrd
* Cache various buffer sizes for channel messages instead of re-calculating
* Convert various size variables to size_t throughout
* Add error handling to recover when messages greater than the internal 
  MAX BUF size are found (must delete to not be wedged)
* Add better reporting for sendmessage() failures
* More verbose debugging in message processing, cookie searching, and in 
  core library routines
* xymonlaunch: Improve logging for actions taken against tasks
  tasks (ie, for log rotation)
* xymonlaunch now passes the path to LOGFILE (if configured) as 
  $XYMONLAUNCH_LOGFILENAME, which will be used as the default logfn for 
  xymond, xymonproxy, xymond_channel, and its children
* xymond_channel: Timestamp and tag log output to reduce confusion w/ 
  child entries