@@ -447,7 +447,7 @@ files are validated.
 .IP "download FILENAME"
 Download a file from the Xymon server\(aqs download directory.
 
-.IP "client[/COLLECTORID] HOSTNAME.OSTYPE [HOSTCLASS]"
+.IP "client[|submit|config][/COLLECTORID] HOSTNAME.OSTYPE [HOSTCLASS]"
 Used to send a "client" message to the Xymon server. Client messages
 are generated by the Xymon client; when sent to the Xymon server they
 are matched against the rules in the
@@ -457,6 +457,12 @@ tests.
 The COLLECTORID is used when sending client-data that are additions
 to the standard client data. The data will be concatenated with the
 normal client data.
+Normally xymond will respond with a copy of the client-local.cfg(5) 
+section used for this system, according to its hostname, OS, and hostclass.
+When "clientsubmit" is used instead, no response is given and the 
+local config is not overwritten.
+When "clientconfig" is sent, the response is given but any actual
+message data transmitted is ignored.
 
 .IP "clientlog HOSTNAME [section=SECTIONNAME[,SECTIONNAME...]]"
 Retrieves the current raw client message last sent by HOSTNAME. The optional
