@@ -632,14 +632,10 @@ int main(int argc, char *argv[])
 				 * at the front of the buffer, we need to skip that when looking at
 				 * what type of message it is. Hence the "cwalk->buf+6".
 				 */
-				if ((strncmp(cwalk->buf+6, "client ", 7) == 0) || (strncmp(cwalk->buf+6, "client/", 7) == 0)) {
-					/*
-					 * "client" messages go to all Xymon servers, but
-					 * we will only pass back the response from one of them
-					 * (the last one).
-					 */
-					msgs_other++;
-					cwalk->snum = SNUM_FIRST;	/* start first to last */
+
+				if ((strncmp(cwalk->buf+6, "client", 6) == 0) && 
+				    (strncmp(cwalk->buf+6, "clientlog", 9) != 0) && 
+				    (strncmp(cwalk->buf+6, "clientconfig", 12) != 0) ) {
 
 					if ((cwalk->buflen + 100 ) < cwalk->bufsize) {
 						int n = sprintf(cwalk->bufp, 
@@ -649,8 +645,19 @@ int main(int argc, char *argv[])
 						cwalk->buflen += n;
 					}
 				}
+
+				if ((strncmp(cwalk->buf+6, "client ", 7) == 0) || (strncmp(cwalk->buf+6, "client/", 7) == 0)) {
+					/*
+					 * "client" messages go to all Xymon servers, but
+					 * we will only pass back the response from one of them
+					 * (the last one).
+					 */
+					msgs_other++;
+					cwalk->snum = SNUM_FIRST;	/* start first to last */
+
+				}
 				else if ((strncmp(cwalk->buf+6, "query", 5) == 0)  ||
-					 (strncmp(cwalk->buf+6, "client", 6) == 0) ||
+					 ((strncmp(cwalk->buf+6, "client", 6) == 0) && (strncmp(cwalk->buf+6, "clientsubmit", 12) != 0)) ||
 					 (strncmp(cwalk->buf+6, "xymond", 6) == 0) ||
 					 (strncmp(cwalk->buf+6, "hobbitd", 7) == 0) ||
 					 (strncmp(cwalk->buf+6, "hostinfo", 8) == 0) ||
@@ -659,7 +666,7 @@ int main(int argc, char *argv[])
 					 (strncmp(cwalk->buf+6, "ping", 4) == 0) ||
 					 (strncmp(cwalk->buf+6, "download", 8) == 0)) {
 					/* 
-					 * These requests get a response back, but send no data.
+					 * These requests get a response back, but send no data (includes 'clientlog' and 'clientconfig').
 					 * Send these to the last of the Xymon servers only.
 					 */
 					msgs_other++;
